MCR-2997 AvoidReassigningParameters