@@ -118,9 +118,10 @@ public class MCRQueryParser extends MCRBooleanClauseParser<Void> {
      */
     private MCRQueryCondition buildCondition(String field, String oper, String value) {
         if (Objects.equals(value, "TODAY")) {
-            value = getToday();
-        }
+            return new MCRQueryCondition(field, oper, getToday());
+        } else {
         return new MCRQueryCondition(field, oper, value);
+        }
     }
 
     private String getToday() {
@@ -255,7 +256,7 @@ public class MCRQueryParser extends MCRBooleanClauseParser<Void> {
         }
 
         if (values.size() == 1) {
-            return ac.getChildren().getFirst();
+            return ac.getChildren().get(0);
         } else {
             return ac;
         }
@@ -274,26 +275,27 @@ public class MCRQueryParser extends MCRBooleanClauseParser<Void> {
 
     private static MCRCondition<Void> normalizeSetCondition(MCRSetCondition<Void> sc) {
         List<MCRCondition<Void>> children = sc.getChildren();
-        sc = sc instanceof MCRAndCondition ? new MCRAndCondition<>() : new MCROrCondition<>();
+        MCRSetCondition<Void> source;
+        source = sc instanceof MCRAndCondition ? new MCRAndCondition<>() : new MCROrCondition<>();
         for (MCRCondition<Void> child : children) {
             MCRCondition<Void> normalizedChild = normalizeCondition(child);
             if (normalizedChild != null) {
                 if (normalizedChild instanceof MCRSetCondition
-                    && sc.getOperator().equals(((MCRSetCondition) normalizedChild).getOperator())) {
+                    && source.getOperator().equals(((MCRSetCondition) normalizedChild).getOperator())) {
                     // Replace (a AND (b AND c)) with (a AND b AND c), same for OR
-                    sc.addAll(((MCRSetCondition<Void>) normalizedChild).getChildren());
+                    source.addAll(((MCRSetCondition<Void>) normalizedChild).getChildren());
                 } else {
-                    sc.addChild(normalizedChild);
+                    source.addChild(normalizedChild);
                 }
             }
         }
-        children = sc.getChildren();
+        children = source.getChildren();
         if (children.isEmpty()) {
             return null;
         } else if (children.size() == 1) {
-            return children.getFirst();
+            return children.get(0);
         } else {
-            return sc;
+            return source;
         }
     }
 
